mengubah tulisan certificates

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div class="row">
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/award certificates/img1.jpg" class="card-img-top" alt="AawardCertificate1" />
+              <img src="img/award certificates/img1.jpg" class="card-img-top" alt="Certificates1" />
               <div class="card-body">
                 <p class="card-text">Presented by: Himpunan Mahasiswa Jurusan Teknik Mesin (HMJ-TM). As a Sie. Minat Bakat.</p>
               </div>
@@ -108,7 +108,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/award certificates/img2.jpg" class="card-img-top" alt="AawardCertificate1" />
+              <img src="img/award certificates/img2.jpg" class="card-img-top" alt="Certificates2" />
               <div class="card-body">
                 <p class="card-text">Presented by: Fakultas Ilmu dan Teknologi Kebumian Institut Teknologi Bandung (FITB). As a Participant.</p>
               </div>
@@ -116,7 +116,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/award certificates/img3.jpg" class="card-img-top" alt="AawardCertificate1" />
+              <img src="img/award certificates/img3.jpg" class="card-img-top" alt="Certificates3" />
               <div class="card-body">
                 <p class="card-text">Presented by: Anak Teknik Indonesia (Engineering Academy). As a Participant.</p>
               </div>
@@ -124,7 +124,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/award certificates/img4.jpg" class="card-img-top" alt="AawardCertificate1" />
+              <img src="img/award certificates/img4.jpg" class="card-img-top" alt="Certificates4" />
               <div class="card-body">
                 <p class="card-text">Presented by: Himpunan Mahasiswa Jurusan Teknik Mesin (HMJ-TM). As a Comittee.</p>
               </div>
@@ -132,7 +132,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/award certificates/img5.jpg" class="card-img-top" alt="AawardCertificate1" />
+              <img src="img/award certificates/img5.jpg" class="card-img-top" alt="Certificates5" />
               <div class="card-body">
                 <p class="card-text">Presented by: Politechnic Engineering Indorama. As a Participant</p>
               </div>
@@ -140,7 +140,7 @@
           </div>
           <div class="col-md-4 mb-3">
             <div class="card">
-              <img src="img/award certificates/img6.jpg" class="card-img-top" alt="AawardCertificate1" />
+              <img src="img/award certificates/img6.jpg" class="card-img-top" alt="Certificates6" />
               <div class="card-body">
                 <p class="card-text">Presented by: Himpunan Mahasiswa Jurusan Teknik Mesin (HMJ-TM). As a Comittee and Chief Executive.</p>
               </div>
