--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <!-- Bootstrap Icon -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css" />
 
+    <!-- AOS -->
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
+
     <!-- My CSS -->
     <link rel="stylesheet" href="style.css" />
 
@@ -48,7 +51,7 @@
     <section class="jumbotron text-center">
       <img src="img/foto profil.jpg" alt="Muhammad Nurji Ali" width="200" class="rounded-circle img-thumbnail" />
       <h1 class="display-4">Muhammad Nurji Ali</h1>
-      <p class="lead">Mechanical Engineering | Faculty Of Aerospace Technology</p>
+      <p class="lead"></p>
       <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
         <path
           fill="#fff"
@@ -68,10 +71,10 @@
           </div>
         </div>
         <div class="row justify-content-center fs-5 text-center">
-          <div class="col-md-7 fst-italic">
+          <div class="col-md-7 fst-italic" data-aos="fade-down-right" data-aos-duration="1000">
             <p>I am fresh graduate of Mechanical Engineering Institute Technology Dirgantara Adisutjipto (ITDA) one of the universities with aerospace nuances is located in Special Region of Yogyakarta.</p>
           </div>
-          <div class="col-md-7 fst-italic">
+          <div class="col-md-7 fst-italic" data-aos="fade-down-left" data-aos-duration="2000">
             <p>
               I once did on the job training at PT. Aero Nusantara Indonesia in the Powerplant (Engine Shop) department, and conducted reseach on the CFM Combustion chamber engine by simulating the spread of heat in the combustion chamber
               using Ansys Fluent Software.
@@ -99,7 +102,7 @@
         </div>
         <div class="row">
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="2000">
               <img src="img/Award Certificates/img1.jpg" class="card-img-top" alt="Certificates1" />
               <div class="card-body">
                 <p class="card-text">Presented by: Himpunan Mahasiswa Jurusan Teknik Mesin (HMJ-TM). As a Sie. Minat Bakat.</p>
@@ -107,7 +110,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-right" data-aos-duration="1000">
               <img src="img/Award Certificates/img2.jpg" class="card-img-top" alt="Certificates2" />
               <div class="card-body">
                 <p class="card-text">Presented by: Fakultas Ilmu dan Teknologi Kebumian Institut Teknologi Bandung (FITB). As a Participant.</p>
@@ -115,7 +118,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="2000">
               <img src="img/Award Certificates/img3.jpg" class="card-img-top" alt="Certificates3" />
               <div class="card-body">
                 <p class="card-text">Presented by: Anak Teknik Indonesia (Engineering Academy). As a Participant.</p>
@@ -123,7 +126,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-right" data-aos-duration="1000">
               <img src="img/Award Certificates/img4.jpg" class="card-img-top" alt="Certificates4" />
               <div class="card-body">
                 <p class="card-text">Presented by: Himpunan Mahasiswa Jurusan Teknik Mesin (HMJ-TM). As a Comittee.</p>
@@ -131,7 +134,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-left" data-aos-duration="2000">
               <img src="img/Award Certificates/img5.jpg" class="card-img-top" alt="Certificates5" />
               <div class="card-body">
                 <p class="card-text">Presented by: Politechnic Engineering Indorama. As a Participant</p>
@@ -139,7 +142,7 @@
             </div>
           </div>
           <div class="col-md-4 mb-3">
-            <div class="card">
+            <div class="card" data-aos="flip-right" data-aos-duration="2000">
               <img src="img/Award Certificates/img6.jpg" class="card-img-top" alt="Certificates6" />
               <div class="card-body">
                 <p class="card-text">Presented by: Himpunan Mahasiswa Jurusan Teknik Mesin (HMJ-TM). As a Comittee and Chief Executive.</p>
@@ -157,6 +160,80 @@
       </svg>
     </section>
     <!-- Akhir Award Certificates -->
+
+    <!-- Gallery -->
+    <section id="gallery">
+      <div class="container">
+        <div class="row text-center mb-3">
+          <div class="col">
+            <h2>Gallery</h2>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/graduation1.jpg" alt="gambar1" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/graduation2.jpg" alt="gambar2" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/graduation3.jpg" alt="gambar3" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/ani1.JPG" alt="gambar4" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/ani2.jpg" alt="gambar5" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/ani3.jpg" alt="gambar6" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/ani4.JPG" alt="gambar7" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/ani5.JPG" alt="gambar8" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/bebas1.jpg" alt="gambar9" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/bebas2.jpg" alt="gambar10" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/bebas3.jpg" alt="gambar11" class="img-fluid gallery-img" />
+            </a>
+          </div>
+          <div class="col-md-3">
+            <a href="#">
+              <img src="img/Gallery/bebas4.JPG" alt="gambar12" class="img-fluid gallery-img" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Akhir Gallery -->
 
     <!-- Contact -->
     <section id="contact">
@@ -212,6 +289,29 @@
     <!-- Akhir Footer -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+    <script>
+      const galleryImage = document.querySelectorAll(".gallery-img");
+
+      galleryImage.forEach((img, i) => {
+        img.dataset.aos = "fade-down";
+        img.dataset.aosDelay = i * 100;
+        img.dataset.aosDuration = 1000;
+      });
+
+      AOS.init();
+    </script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.0/TextPlugin.min.js"></script>
+    <script>
+      gsap.registerPlugin(TextPlugin);
+      gsap.to(".lead", { duration: 2, delay: 1.5, text: "Mechanical Engineering | Faculty Of Aerospace Technology" });
+      gsap.from(".jumbotron img", { duration: 1, rotateY: 360, opacity: 0 });
+      gsap.from(".navbar", { duration: 1.5, y: "-100%", opacity: 0, ease: "bounce" });
+      gsap.from(".display-4", { duration: 1, x: -50, opacity: 0, delay: 0.5, ease: "bounce" });
+    </script>
 
     <script>
       const scriptURL = "https://script.google.com/macros/s/AKfycbwOmkEOuRPhAjLGzI-gNnT2C8_9jzLuzuX6acgPU8AipxGuaKGwlEyxaSTTSTkBaZuv/exec";
